# TopologyTracer

./: CMakeLists.txt  Neues Textdokument.txt  README.md
docs/: Thumbs.db
docs/images/: Thumbs.db
docs/source/: conf.py  index.rst  input.rst  licence.rst  refs.rst  setup.rst  simulate.rst  tracing.rst
example/: README.txt  Texture_15000.ori
scripts/: ExtractGrowthPaths.m  FollowIndividualGrainNeighborHoods.m  PRX2D_TopoTracer2D3D_RXEvolution_01.m  README.txt
src/: TopologyTracer2D3D_Allocator.cpp  TopologyTracer2D3D_Datatypes.h  TopologyTracer2D3D_Defs.h  TopologyTracer2D3D_MPIDatatypes.h  TopologyTracer2D3D_Main.cpp  TopologyTracer2D3D_Math.cpp  TopologyTracer2D3D_Math.h  TopologyTracer2D3D_Settings.cpp  TopologyTracer2D3D_Settings.h  TopologyTracer2D3D_Snapshot.h  TopologyTracer2D3D_Topohdl.cpp  TopologyTracer2D3D_Topohdl.h  topologytracer.cpp  topologytracer_defs.h  topologytracer_kernel.cpp  topologytracer_kernel.h  topologytracer_math.cpp  topologytracer_math.h  topologytracer_random.cpp  topologytracer_random.h
